# WheelTime

./: .gitignore  CMakeLists.txt  README.md  STYLE.md
.cursor/: things.mdc
Wheel-Time/: CMakeLists.txt  EmoteWheel.cpp  EmoteWheel.h  main.cpp
app/: CMakeLists.txt  README.md
app/include/: App.hpp
app/include/App/: Action.hpp  ActionExecutionContext.hpp  ActionHistory.hpp  ActionItems.hpp  App.hpp  ChannelManager.hpp  DelayQueue.hpp  ExecuteResult.hpp  FuzzyMatch.hpp  Gui.hpp  HoverButton.hpp  Menu.hpp  MenuConfigLoader.hpp  ProgramIndex.hpp  RadialMenuWidget.hpp  Scheduler.hpp  SearchConfig.hpp  SearchPaletteWidget.hpp  SettingsWindow.hpp  SynchronousActionRunner.hpp  ThreadSafeQueue.hpp  WorkQueue.hpp  WorkerPool.hpp
app/include/App/ActionItems/: ActionItem.hpp  Cancel.hpp  Close.hpp  Delay.hpp  Keystroke.hpp  LaunchApp.hpp  Menu.hpp  MouseButton.hpp  MouseMove.hpp  NthFrequent.hpp  NthRecent.hpp  Script.hpp  Search.hpp  Socket.hpp
app/src/: Action.cpp  ActionExecutionContext.cpp  ActionHistory.cpp  ActionItems.cpp  App.cpp  ChannelManager.cpp  DelayQueue.cpp  ExecuteResult.cpp  FuzzyMatch.cpp  Gui.cpp  HoverButton.cpp  Menu.cpp  MenuConfigLoader.cpp  ProgramIndex.cpp  RadialMenuWidget.cpp  Scheduler.cpp  SearchPaletteWidget.cpp  SettingsWindow.cpp  SynchronousActionRunner.cpp  WorkQueue.cpp  WorkerPool.cpp
app/src/ActionItems/: ActionItem.cpp  Cancel.cpp  Close.cpp  Delay.cpp  Keystroke.cpp  LaunchApp.cpp  Menu.cpp  MouseButton.cpp  MouseMove.cpp  NthFrequent.cpp  NthRecent.cpp  Script.cpp  Search.cpp  Socket.cpp
app/tests/: TestFakes.hpp  action_history_smoke.cpp  action_history_tests.cpp  action_items_tests.cpp  phase10_scheduler_tests.cpp  phase2_queue_smoke.cpp  phase3_worker_smoke.cpp  phase4_scheduler_smoke.cpp  phase5_delay_queue_smoke.cpp  phase6_channel_smoke.cpp  phase7_cancel_smoke.cpp  phase8_pause_smoke.cpp  phase9_actionitems_smoke.cpp  scheduler_tests.cpp  search_palette_tests.cpp  thread_safe_queue_tests.cpp
config/: default_menu.json
docs/: Acceptance Criteria.md  C++ Coding Standards Document.md  DefinitionOfDone.md  Doxyfile  Scheduler.md  cursor_scheduler_design_implementation_Phase_1_to_7.md  cursor_scheduler_design_implementation_Phase_8_to_9.md  release-summary.md  test-plan-and-report.md
docs/html/: AppLaunchingPrototype_8md.html  AppLaunchingResearch_8md.html  App_8hpp.html  App_8hpp.js  App_8hpp_source.html  EmoteWheel_8cpp.html  EmoteWheel_8h.html  EmoteWheel_8h.js  EmoteWheel_8h_source.html  Events_8hpp.html  Events_8hpp_source.html  Execute_8hpp.html  Execute_8hpp.js  Execute_8hpp_source.html  Inputs_8hpp.html  Inputs_8hpp.js  Inputs_8hpp_source.html  README_8md.html  Wheel-Time_2main_8cpp.html  Wheel-Time_2main_8cpp.js  Window_8cpp.html  Window_8cpp.js  Window_8hpp.html  Window_8hpp.js  Window_8hpp_source.html  _acceptance_01_criteria_8md.html  _action_8cpp.html  _action_8hpp.html  _action_8hpp.js  _action_8hpp_source.html  _action_execution_context_8cpp.html  _action_execution_context_8hpp.html  _action_execution_context_8hpp.js  _action_execution_context_8hpp_source.html  _action_history_8cpp.html  _action_history_8hpp.html  _action_history_8hpp.js  _action_history_8hpp_source.html  _action_item_8cpp.html  _action_item_8cpp.js  (+678 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+120 more)
docs/latex/: AppLaunchingPrototype_8md.tex  AppLaunchingResearch_8md.tex  App_8hpp.tex  App_8hpp_source.tex  EmoteWheel_8cpp.tex  EmoteWheel_8h.tex  EmoteWheel_8h_source.tex  Events_8hpp.tex  Events_8hpp_source.tex  Execute_8hpp.tex  Execute_8hpp_source.tex  Inputs_8hpp.tex  Inputs_8hpp_source.tex  README_8md.tex  Wheel-Time_2main_8cpp.tex  Window_8cpp.tex  Window_8hpp.tex  Window_8hpp_source.tex  _acceptance_01_criteria_8md.tex  _action_8cpp.tex  _action_8hpp.tex  _action_8hpp_source.tex  _action_execution_context_8cpp.tex  _action_execution_context_8hpp.tex  _action_execution_context_8hpp_source.tex  _action_history_8cpp.tex  _action_history_8hpp.tex  _action_history_8hpp_source.tex  _action_item_8cpp.tex  _action_item_8hpp.tex  _action_item_8hpp_source.tex  _action_items_2_menu_8cpp.tex  _action_items_2_menu_8hpp.tex  _action_items_2_menu_8hpp_source.tex  _action_items_8hpp.tex  _action_items_8hpp_source.tex  _app_8cpp.tex  _app_8hpp.tex  _app_8hpp_source.tex  _app_launching_prototype_8md.tex  (+353 more)
docs/scrum/: Release Plan.md  Sprint #1 Report.md  Sprint #2 Report.md  Sprint #3 Report.md  Sprint #4 Report.md  Sprint Report #1.md  Sprint#2 Report.md  SprintPlan #1.md  SprintPlan #2.md  SprintPlan #3.md  SprintPlan #4.md  SprintPlan1.md  Wheel_Time_Final_Presentation.pptx
launcher/: CMakeLists.txt  README.md
launcher/src/: main.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
notes/: AppLaunchingPrototype.md  AppLaunchingResearch.md  hotkey-basics.md  secure-launching.md
platform/: CMakeLists.txt  README.md
platform/include/: Inputs.hpp  Window.hpp
platform/include/Platform/: Events.hpp  Execute.hpp  Inputs.hpp  Window.hpp
platform/src/windows/: Execute.cpp  ExecuteTemp.cpp  Inputs.cpp  Window.cpp  execute.cpp  execute.cpp.md
resources/styles/: darkWheel.qss  defaultWheel.qss
scripts/: package-windows.ps1
src/: main.cpp
