add_library(App 
    src/App.cpp
    include/App/App.hpp
    src/HoverButton.cpp
    include/App/HoverButton.hpp
    src/RadialMenuWidget.cpp
    include/App/RadialMenuWidget.hpp
    src/Gui.cpp
    include/App/Gui.hpp
    src/Menu.cpp
    include/App/Menu.hpp
    src/Action.cpp
    include/App/Action.hpp
    src/ActionItems/ActionItem.cpp
    src/ActionItems/Delay.cpp
    src/ActionItems/Script.cpp
    src/ActionItems/LaunchApp.cpp
    src/ActionItems/Keystroke.cpp
    src/ActionItems/Menu.cpp
    src/ActionItems/Close.cpp
    src/ActionItems/Socket.cpp
    src/ActionItems/NthRecent.cpp
    src/ActionItems/NthFrequent.cpp
    src/ActionItems/MouseMove.cpp
    src/ActionItems/MouseButton.cpp
    src/ActionItems/Cancel.cpp
    src/ActionItems/Search.cpp
    src/ActionHistory.cpp
    src/FuzzyMatch.cpp
    src/ProgramIndex.cpp
    src/SearchPaletteWidget.cpp
    include/App/ActionItems.hpp
    include/App/ActionItems/ActionItem.hpp
    include/App/ActionItems/Delay.hpp
    include/App/ActionItems/Script.hpp
    include/App/ActionItems/LaunchApp.hpp
    include/App/ActionItems/Keystroke.hpp
    include/App/ActionItems/Menu.hpp
    include/App/ActionItems/Close.hpp
    include/App/ActionItems/Socket.hpp
    include/App/ActionItems/NthRecent.hpp
    include/App/ActionItems/NthFrequent.hpp
    include/App/ActionItems/MouseMove.hpp
    include/App/ActionItems/MouseButton.hpp
    include/App/ActionItems/Cancel.hpp
    include/App/ActionItems/Search.hpp
    include/App/ActionHistory.hpp
    include/App/FuzzyMatch.hpp
    include/App/ProgramIndex.hpp
    include/App/SearchConfig.hpp
    include/App/SearchPaletteWidget.hpp
    src/ActionExecutionContext.cpp
    include/App/ActionExecutionContext.hpp
    src/ExecuteResult.cpp
    include/App/ExecuteResult.hpp
    include/App/ThreadSafeQueue.hpp
    src/WorkerPool.cpp
    include/App/WorkerPool.hpp
    src/Scheduler.cpp
    include/App/Scheduler.hpp
    src/DelayQueue.cpp
    include/App/DelayQueue.hpp
    src/ChannelManager.cpp
    include/App/ChannelManager.hpp
    src/MenuConfigLoader.cpp
    include/App/MenuConfigLoader.hpp
    src/SettingsWindow.cpp
    include/App/SettingsWindow.hpp
)

target_include_directories(App 
    PUBLIC 
        include
)

target_link_libraries(App
    PUBLIC 
        Platform
        Qt6::Widgets
        Qt6::Core
        Qt6::Gui
)

# ThreadSafeQueue tests (header-only; no Qt / App runtime).
add_executable(thread_safe_queue_tests
    tests/thread_safe_queue_tests.cpp
)
target_include_directories(thread_safe_queue_tests
    PRIVATE
        include
)
target_compile_features(thread_safe_queue_tests
    PRIVATE
        cxx_std_23
)

# Built-in ActionItem tests.
add_executable(action_items_tests
    tests/action_items_tests.cpp
)
target_link_libraries(action_items_tests
    PRIVATE
        App
)
target_compile_features(action_items_tests
    PRIVATE
        cxx_std_23
)

# Comprehensive scheduler tests.
add_executable(scheduler_tests
    tests/scheduler_tests.cpp
)
target_include_directories(scheduler_tests
    PRIVATE
        tests
)
target_link_libraries(scheduler_tests
    PRIVATE
        App
)
target_compile_features(scheduler_tests
    PRIVATE
        cxx_std_23
)

# ActionHistory regression tests.
add_executable(action_history_tests
    tests/action_history_tests.cpp
)
target_link_libraries(action_history_tests
    PRIVATE
        App
)
target_compile_features(action_history_tests
    PRIVATE
        cxx_std_23
)

# Search palette tests (fuzzy match, config round-trip, palette results).
add_executable(search_palette_tests
    tests/search_palette_tests.cpp
)
target_link_libraries(search_palette_tests
    PRIVATE
        App
)
target_compile_features(search_palette_tests
    PRIVATE
        cxx_std_23
)
